overlap fix

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ strong {
   }
 
 #attribution {
-    background-color: #d7c5b1;
+    background-color: #e2d5c5;
     padding: 20px;
     text-align: center;
     margin-top: 300px;
